--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,12 @@ jobs:
 
       - name: Allow SSH access from GitHub Actions runner
         run: |
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/temp_key
+          chmod 600 ~/.ssh/temp_key
+          mv ~/.ssh/temp_key ~/.ssh/id_rsa
+
+          # Add the host to the known_hosts file
+          ssh-keyscan your-instance-ip >> ~/.ssh/known_hosts
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -29,3 +33,6 @@ jobs:
 
       - name: Deploy to AWS
         run: bash scripts/deploy.sh
+
+      - name: Cleanup SSH key
+        run: rm ~/.ssh/id_rsa
